# DRL-Tetris

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yaml  eval.py  game_controller_BOUNCE.py  models  print_settings.py  requirements.txt  scratchpaper.py  settings_printer.py  speedcheck.py  speedtest_thread.py  thread_train.py  thread_trainQ3_rewardshaper.py  thread_train_Q.py  thread_train_Q3biglineclear.py  thread_train_sixten.py  thread_train_sventon.py  threaded_runner.py  tournament.py
agents/: __init__.py  my_first_agent.py  random_agent.py  tetris_agent.py
agents/agent_utils/: __init__.py  data_entry.py  experience_replay.py  experiencereplay_test.py  fcns.py  pg_experience_replay.py  q_helper_fcns.py  reward_shapers.py  state_fcns.py  state_unpack.py  trajectory.py
agents/curiosity_agent/: test.py  (+2 more)
aux/: __init__.py  experiment_schedule.py  misc.py  parameter.py  scoreboard.py  settings.py  settings_printer.py  tf_hooks.py  utils.py
dockerfiles/: Dockerfile.main  Dockerfile.sidecar  requirements.local.txt  requirements.main.txt  requirements.sidecar.txt  run_test.sh
drl_tetris/: runner.py  trainer.py  training_state.py  worker.py
environment/: network_environment.py  tetris_environment.py  tetris_environment_vector.py
environment/game_backend/source/: CMakeCache.txt  CMakeLists.txt  Combo.cpp  Combo.h  DropDelay.cpp  DropDelay.h  Garbage.cpp  Garbage.h  Makefile  PythonHandle.cpp  PythonHandle.h  TestField.h  cmake_install.cmake  gameField.h  gamePlay.cpp  gamePlay.h  packet_compress.cpp  packet_compress.hpp  pieces.h
environment/networking/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  extendSFMLnet.py  pySFMLnet.cpp  pySFMLnet.cpp_BACKUP  pySFMLnet.h  pySFMLnet.h_BACKUP
experiments/: base_experiment.py  presets.py  sixten_base.py  sventon_base.py  sventon_dbg_base.py  sventon_dqn.py  sventon_ppo.py  sventon_silver.py  sventon_silver_ppo.py  thread_train_sventon_dbg33.py
scripts/: eval.py  print_settings.py  trainer_runscript.py  worker_runscript.py
threads/: __init__.py  threaded_runner.py  trainer_thread.py  worker_thread.py  wrangler_thread.py
tools/: __init__.py  experiment_schedule.py  parameter.py  scoreboard.py  settings.py  settings_printer.py  sidecar_app.py  tf_hooks.py  utils.py
(+165 files in other folders)
